gitops/espresso/infrastructure/configs/hubble-ui/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  addresses:
    - type: IPAddress
      value: 10.0.187.129
    - type: IPAddress
      value: fd7a:115c:a1e0:188::1
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
