gitops/espresso/infrastructure/configs/hubble-ui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - hubble.asgard.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
